  The "Downloaded Songs" tier in Rock Band takes a noticable amount
  of time to expand due to the large number of songs in that tier. This
  is a known issue.
- Added a new update mechanism for Rock Band song data that should make
  updating the song data a little faster.
- Added Classic Rock Track Pack tier for RB2 on PS2.

Version 0.2.6
-------------
- Added Rock Band 2 for PS2 and Wii (finally).

Version 0.2.5
-------------
- Added Track Pack Volume 2 tier for PS2 and Wii and AC/DC Live Track Pack
  tier for Wii.

Version 0.2.4
-------------
- Fixed error when trying to download song data after a song's name
  had been changed on ScoreHero.
- Added Rock Band 2 for PS3.
- Added AC/DC Live Track Pack tier for Rock Band games.
- Added additional forum links.

Version 0.2.3
-------------
- Some text has been converted to be more "friendly."
- The splash screen is no longer always-on-top.
- Added a context menu when you right-click on a song in the scores
  table. It has items to bring you to the song's rankings, wiki, and
  SP wiki pages as well as a menu for any links from the SP wiki page,
  which are usually links to SP path images.
- Added wiki menu for quick wiki access.
- Added an update checker. A download link will be displayed in the 
  status bar if a newer version is available (you must still install
  the update manually however).
- Added CTRL+ALT+U shortcut to open the Score Upload Wizard.

Version 0.2.2
-------------
- Corrected a bug that prevented you from logging in if you did not
  enter your username /exactly/ as it appeared on ScoreHero.
- Clicking a blue, underlined score (or the open button next to the image
  URL in the editor) will now open an internal picture viewer instead of 
  launching an external browser, if possible.
- Added better detection for determining if a score submission was successful. 
  Scores can be resubmitted if it is not certain they were submitted initially.